Mobile fix on mobile contact information

--- a/src/scss/global/navigation/main-footer.scss
+++ b/src/scss/global/navigation/main-footer.scss
@@ -26,9 +26,12 @@
 
   .main-footer-contact-main {
     color: $secondary;
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: bold;
     margin-bottom: .5rem;
+    @include media-breakpoint-up(lg) {
+      font-size: 1.1rem;
+    }
 
     a {
       color: $secondary;
